Update Task 1 - Analysis and cleaning.ipynb
Adding os

--- a/Task 1 - Analysis and cleaning.ipynb
+++ b/Task 1 - Analysis and cleaning.ipynb
@@ -10,7 +10,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from datetime import *"
+    "from datetime import *\n",
+    "import os\n"
    ]
   },
   {
